--- a/install
+++ b/install
@@ -147,6 +147,7 @@ while true; do
     8) # Check if code command exists
         if ! command -v code &>/dev/null; then
             echo >&2 "${RED}Can't find ${CYAN}code ${RED}...${RESETCOLOR}"
+            break
         fi
         while IFS="" read -r line || [ -n "$line" ]; do # safe way of reading a file... i think -> https://stackoverflow.com/questions/1521462/looping-through-the-content-of-a-file-in-bash
             echo "${YELLOW}Installing ${CYAN}${line}...${RESETCOLOR}"
